--- a/back-end/views/index.ejs
+++ b/back-end/views/index.ejs
@@ -84,8 +84,8 @@
 			<div class="row">
 				<div class="col-lg-12">
 					<div class="info-section">
-						<h2 class="info__title text-center">SmartBets это-</h2>
-						<p class="info__text text-center">Надежный партнер</p>
+						<h2 class="info__title text-center">SmartBets это</h2>
+						<p class="info__text text-center">надежный партнер</p>
 					</div>
 				</div>
 			</div>
