--- a/back-end/views/buy.ejs
+++ b/back-end/views/buy.ejs
@@ -12,7 +12,7 @@
 	<link href="/css/style2.css" rel="stylesheet">
 	<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans|Roboto|Varela+Round&display=swap" rel="stylesheet">
-	<title>Document</title>
+	<title>Оформить подписку на SmatrBets </title>
 </head>
 
 <body>
@@ -130,7 +130,7 @@
 
 		</div>
 	</div>
-	</div>
+
 	<div class="calc">
 		<div class="container">
 			<div class="calc-money">
@@ -142,10 +142,10 @@
 				<div class="row">
 					<div class="col-lg-12">
 						<form class="form-calc d-flex justify-content-around ">
-							<label for="input-earn ">
+							<label for="input__earn">
 								<span class="rate-bets">Размер ставки</span>
 
-								<input class="input__earn" type="number" placeholder="Введите сумму ставки">
+								<input id="input__earn" type="number" placeholder="Введите сумму ставки">
 							</label>
 							<label for="select__rate">
 								<span class="tarif">тарифный план</span>
@@ -179,9 +179,6 @@
 			</div>
 		</div>
 	</div>
-
-	</div>
-
 
 	<footer>
 		<div class="container">
