--- a/back-end/views/welcome.ejs
+++ b/back-end/views/welcome.ejs
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Roboto&display=swap" rel="stylesheet">
-	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<link href="/css/animate.css" rel="stylesheet">
-	<link href="/css/style4.css" rel="stylesheet">
-	<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
-	<link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans|Roboto|Varela+Round&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/css/animate.css" rel="stylesheet">
+    <link href="/css/style4.css" rel="stylesheet">
+    <link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans|Roboto|Varela+Round&display=swap" rel="stylesheet">
+    <title>User Cabinet SmartBets</title>
 </head>
+
 <body>
-    
 
-<div class="header">
-    <div class="container">
- <div class="row">
-     <div class="col-lg-12">
-        <div class="nav-menu">
-            <ul class="menu d-flex justify-content-center">
-                <li class="menu__item"><a href="/" class="link__item">Главная</a></li>
-                <li class="menu__item"><a href="/buy" class="link__item">Инфо про подписку</a></li>
-                <li class="menu__item"> <p class="p__item"><%= user.name %></p></li>
-    
-            </ul>
-        </div>
-        <h1 class="welcome-title text-center">Приветствуем Вас на нашем сайте!</h1>
-     </div>
- </div>
 
+    <div class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <div class="nav-menu">
+                        <ul class="menu d-flex justify-content-center">
+                            <li class="menu__item"><a href="/" class="link__item">Главная</a></li>
+                            <li class="menu__item"><a href="/buy" class="link__item">Инфо про подписку</a></li>
+                            <li class="menu__item">
+                                <p class="p__item"><%= user.name %></p>
+                            </li>
+
+                        </ul>
+                    </div>
+                    <h1 class="welcome-title text-center">Приветствуем Вас на нашем сайте!</h1>
+                </div>
             </div>
+
         </div>
+    </div>
 
     <div class="main">
         <div class="container">
@@ -48,48 +52,50 @@
                             <li class="inst__item">Выбираете тариф или подписку</li>
                             <li class="inst__item">нажимаете на кнопку купить прогноз</li>
                             <li class="inst__item">переходите оплатить онлайн</li>
-                            <li class="inst__item">после оплаты мы высылаем вам прогноз на ваш емейл и вы его сможете видеть на этой странице! </li>
+                            <li class="inst__item">после оплаты мы высылаем вам прогноз на ваш емейл и вы его сможете
+                                видеть на этой странице! </li>
 
                         </ol>
-                       <div class="btns__buy d-flex ">
-                           <button class="btn__rate"><a href="/#our-rate">Хочу купить прогноз</a></button>
-                           <button class="btn__rate"><a href="/buy">Хочу оформить подписку</a></button>
-                       </div>
+                        <div class="btns__buy d-flex ">
+                            <button class="btn__rate"><a href="/#our-rate">Хочу купить прогноз</a></button>
+                            <button class="btn__rate"><a href="/buy">Хочу оформить подписку</a></button>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-6">
-                
+
                     <div class="our__rewiev__img clip-path"></div>
-  
-              
-                
-                    
-                    </div>
+
+
+
+
                 </div>
-                <div class="row">
-                    <div class="col-lg-12 d-flex justify-content-end">
-                        <img src="http://emoticons.do.am/1/110/9.png" class="mem__img" alt="mem">
-                    </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-12 d-flex justify-content-end">
+                    <img src="http://emoticons.do.am/1/110/9.png" class="mem__img" alt="mem">
                 </div>
             </div>
         </div>
     </div>
-   
+    </div>
 
 
 
 
-		
 
 
-<script src="./node_modules/card-info/dist/card-info.min.js"></script>
+
+
+    <script src="./node_modules/card-info/dist/card-info.min.js"></script>
     <script src="/js/main3.js">
-	</script> 
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
-	</script> 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
-	</script> 
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
-	</script>
+    </script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js">
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js">
+    </script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js">
+    </script>
 </body>
+
 </html>
