--- a/back-end/views/card.ejs
+++ b/back-end/views/card.ejs
@@ -12,7 +12,7 @@
 	<link href="/css/style3.css" rel="stylesheet">
 	<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="https://fonts.googleapis.com/css?family=Lato|PT+Sans|Roboto|Varela+Round&display=swap" rel="stylesheet">
-	<title>Document</title>
+	<title>Покупка прогноза и оформление подписки</title>
 </head>
 
 <body>
