--- a/back-end/views/index.ejs
+++ b/back-end/views/index.ejs
@@ -12,7 +12,7 @@
 	<link href="/css/style.css" rel="stylesheet">
 	<link href="/images/favicon.ico" rel="shortcut icon" type="image/x-icon">
 	<link href="/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet">
-	<title>Прогнозы на спорт</title>
+	<title>Надежные прогнозы на спорт от SmartBets</title>
 </head>
 
 <body>
