--- a/back-end/views/index.ejs
+++ b/back-end/views/index.ejs
@@ -5,6 +5,9 @@
 	<meta charset="UTF-8">
 	<meta content="width=device-width, initial-scale=1.0" name="viewport">
 	<meta content="ie=edge" http-equiv="X-UA-Compatible">
+	<meta name="keywords" content="прогнозы на спорт от лучших аналитиков рунета" />
+	<meta name="description"
+		content="Максимально высокие коэффициенты на прогнозв на спорт с минимальным риском для вас,футбол,хокей,баскетбол и другие виды спорта!" />
 	<link href="https://fonts.googleapis.com/css?family=Open+SansRoboto&display=swap" rel="stylesheet">
 	<link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
 	<link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
